--- a/client/components/Pages/Cart.css
+++ b/client/components/Pages/Cart.css
@@ -8,7 +8,7 @@
     border-radius: 8px;
     top:800px;
     width: 300px;
-    height: 300px;
+    height: 150px;
     opacity: 0;
     visibility: hidden;
     background: linear-gradient(134.17deg, #eef0f5 4.98%, #e6e9ef 94.88%);
@@ -20,4 +20,14 @@
     opacity: 1;
     visibility: visible;
     transform: translateY(0);
+}
+
+.blur-background{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(15px);
 }
