--- a/client/components/Pages/CartNameInput.css
+++ b/client/components/Pages/CartNameInput.css
@@ -4,15 +4,24 @@
     justify-content: center;
     align-items: center;
 }
+
+.class-name-input-form input {
+    padding: 20px;
+    height: 50px;
+    font-size: 16px;
+    margin: 20px;
+}
+
 .class-name-input-form-buttons {
     display: flex;
     flex-direction: row;
     gap: 50px;
     font-size: 20px;
+    font-weight: bold;
 }
 
 .class-name-input-form-buttons button {
     border-radius: 5px;
     background: #117a8b;
-    width: 50px;
+    width: 100px;
 }
